<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/textView"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <GridLayout
                android:layout_width="358dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:orientation="vertical"
                    android:translationX="0dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView3" />

                    <EditText
                        android:id="@+id/n1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:maxLines="3" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView4" />

                    <EditText
                        android:id="@+id/n2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView5" />

                    <EditText
                        android:id="@+id/n3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/def1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0.00" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView11" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView7" />

                    <EditText
                        android:id="@+id/n4"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView8" />

                    <EditText
                        android:id="@+id/n5"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView9" />

                    <EditText
                        android:id="@+id/n6"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/def2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0.00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="95dp"
                        app:srcCompat="@drawable/notas2" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView16" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView17" />

                    <EditText
                        android:id="@+id/n7"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView18" />

                    <EditText
                        android:id="@+id/n8"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView19" />

                    <EditText
                        android:id="@+id/n9"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/def3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0.00" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="172dp"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.43" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="calcular"
                            android:text="@string/button" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="acerca"
                            android:text="@string/button2" />
                    </LinearLayout>

                </LinearLayout>
            </GridLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>